some collision & trigger node decoding

--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -37,7 +37,7 @@
             Camera="{Binding Camera}"
             CoordinateSystemLabelForeground="White"
             EffectsManager="{Binding EffectsManager}"
-            FXAALevel="High"
+            FXAALevel="Ultra"
             ShowCoordinateSystem="True"
             UseDefaultGestures="False">
             <hx:Viewport3DX.InputBindings>
