--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -43,7 +43,8 @@
             EnableRenderOrder="True"
             FXAALevel="High"
             ShowCoordinateSystem="True"
-            UseDefaultGestures="False">
+            UseDefaultGestures="False"
+            ZoomExtentsWhenLoaded="True">
             <hx:Viewport3DX.InputBindings>
                 <MouseBinding Command="hx:ViewportCommands.Rotate" Gesture="LeftClick" />
                 <MouseBinding Command="hx:ViewportCommands.Pan" Gesture="MiddleClick" />
@@ -59,7 +60,7 @@
             <hx:DirectionalLight3D Direction="0, 0, -1" Color="White" />
             <hx:DirectionalLight3D Direction="1, 0, 0" Color="White" />
             <hx:DirectionalLight3D Direction="-1, 0, 0" Color="White" />
-            <hx:EnvironmentMap3D Texture="{Binding EnvironmentMap}" />
+            <!--  hx:EnvironmentMap3D Texture="{Binding EnvironmentMap}" /  -->
             <!--  hx:ShadowMap3D /  -->
             <hx:ItemsModel3D x:Name="hxContentVisual" ItemsSource="{Binding SelectedAppearance.ModelGroup}" />
             <!--  hx:Element3DPresenter Content="{Binding GroupModel}" /  -->
